@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-15T16:26:29Z",
-  "count_outdated" : 83,
-  "uniques_outdated" : 57,
-  "count" : 128,
-  "uniques" : 89,
+  "timestamp" : "2022-04-16T01:16:21Z",
+  "count_outdated" : 96,
+  "uniques_outdated" : 66,
+  "count" : 130,
+  "uniques" : 90,
   "clones" : [
-    {
-      "timestamp": "2022-04-01T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 2, 13 ],
-      "uniques": 8,
-      "uniques_minmax": [ 1, 9 ]
-    },
     {
       "timestamp": "2022-04-02T00:00:00Z",
       "count": 10,
