@@ -1,3 +1,9 @@
+2022-04-16T01:16:21Z:
+* notice: last 14d: all unq: 34 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 83 57 / 128 89
+* notice: next accum: outdated-all outdated-unq / all unq: 96 66 / 130 90
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-15T16:26:29Z:
 * notice: last 14d: all unq: 45 18
 * notice: prev accum: outdated-all outdated-unq / all unq: 83 57 / 124 86
